--- a/pages/assets/css/dashboard.css
+++ b/pages/assets/css/dashboard.css
@@ -384,34 +384,77 @@
     top: 27px;
     left: 86px;
   }
-  .home-checkbox {
-    top: 83px;
-    left: 22px;
+  .div-check{
+    margin-left: 18px;
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+  }
+  .checkbox-wrapper-2 .ikxBAC {
+    top: -425px;
+    left: 6px;
+    appearance: none;
+    background-color: #dfe1e4;
+    border-radius: 72px;
+    border-style: none;
+    flex-shrink: 0;
+    height: 20px;
+    margin: 0;
+    position: relative;
+    width: 30px;
+  }
+  .checkbox-wrapper-2 .ikxBAC::before {
+    bottom: -6px;
+    content: "";
+    left: -6px;
     position: absolute;
-    box-shadow: 1px 2px 1px 0px #d4d4d4;
-    border-color: var(--dl-color-gray-black);
-    border-width: 1px;
-    border-radius: var(--dl-radius-radius-radius4);
+    right: -6px;
+    top: -6px;
+  }
+  .checkbox-wrapper-2 .ikxBAC,
+  .checkbox-wrapper-2 .ikxBAC::after {
+    transition: all 100ms ease-out;
+  }
+  .checkbox-wrapper-2 .ikxBAC::after {
+    background-color: #fff;
+    border-radius: 50%;
+    content: "";
+    height: 14px;
+    left: 3px;
+    position: absolute;
+    top: 3px;
+    width: 14px;
+  }
+  .checkbox-wrapper-2 input[type=checkbox] {
+    cursor: default;
+  }
+  .checkbox-wrapper-2 .ikxBAC:hover {
+    background-color: #c9cbcd;
+    transition-duration: 0s;
+  }
+  .checkbox-wrapper-2 .ikxBAC:checked {
+    background-color: #653183;
+  }
+  .checkbox-wrapper-2 .ikxBAC:checked::after {
+    background-color: #fff;
+    left: 13px;
+  }
+  .checkbox-wrapper-2 :focus:not(.focus-visible) {
+    outline: 0;
+  }
+  .checkbox-wrapper-2 .ikxBAC:checked:hover {
+    background-color: #6e4188;
   }
   .home-text09 {
     top: 83px;
-    left: 44px;
+    left: 60px;
     color: #ffffff;
     position: absolute;
     font-size: 14px;
   }
-  .home-checkbox1 {
-    top: 113px;
-    left: 23px;
-    position: absolute;
-    box-shadow: 1px 2px 1px 0px #d4d4d4;
-    border-color: var(--dl-color-gray-black);
-    border-width: 1px;
-    border-radius: var(--dl-radius-radius-radius4);
-  }
   .home-text10 {
     top: 114px;
-    left: 43px;
+    left: 60px;
     color: rgb(255, 255, 255);
     position: absolute;
     font-size: 14px;
@@ -459,41 +502,34 @@
     font-size: 14px;
   }
   .home-textinput {
-    top: 190px;
-    left: 23px;
     width: 62px;
     height: 28px;
-    position: absolute;
     margin-right: 0px;
     padding-right: 0px;
   }
   .home-textinput1 {
-    top: 190px;
-    left: 109px;
     width: 62px;
     height: 28px;
-    margin: auto;
-    position: absolute;
     margin-right: 0px;
     padding-right: 0px;
   }
-  .home-text27 {
-    top: 190px;
-    left: 83px;
-    width: 30px;
-    height: 29px;
+  .div-intervalo{
     position: absolute;
+    top: 190px;
+    left: 25px;
+  }
+  .home-text27 {
+    padding: 3.5px 10px 3.5px 10px;
     text-align: center;
-    line-height: 2;
     border-radius: 3px;
     background-color: var(--dl-color-gray-500);
   }
   .home-text28 {
     top: 270px;
-    left: 170px;
+    left: 180px;
     color: #ffffff;
     width: 81px;
-    height: 29px;
+    height: 27px;
     position: absolute;
     font-size: 12px;
     text-align: center;
@@ -503,10 +539,10 @@
   }
   .home-text29 {
     top: 341px;
-    left: 170px;
+    left: 180px;
     color: #ffffff;
     width: 81px;
-    height: 29px;
+    height: 27px;
     position: absolute;
     font-size: 12px;
     text-align: center;
@@ -515,15 +551,10 @@
     background-color: var(--dl-color-gray-500);
   }
   .home-text30 {
-    top: 189px;
-    left: 169px;
+    padding: 8px;
+    padding-bottom: 4px;
     color: #ffffff;
-    width: 81px;
-    height: 30px;
-    position: absolute;
     font-size: 12px;
-    text-align: center;
-    line-height: 2.5;
     border-radius: 3px;
     background-color: var(--dl-color-gray-500);
   }
